--- a/abcnodeweb/src/styles.css
+++ b/abcnodeweb/src/styles.css
@@ -44,7 +44,7 @@
         }
 
         .view {
-            background: url("https://mdbootstrap.com/img/Photos/Others/img%20(50).jpg")no-repeat center center fixed;
+            background: url("assets/images/2.jpg")no-repeat center center fixed;
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
