--- a/abcnodeweb/src/app/sign-in/sign-in.component.html
+++ b/abcnodeweb/src/app/sign-in/sign-in.component.html
@@ -1,3 +1,36 @@
-<p>
-  sign-in works!
-</p>
+<!--Header-->
+<app-header></app-header>
+<!--/.Header-->
+<!--Dashboard-->
+<div class="view hm-black-light">
+    <div class="full-bg-img flex-center">
+      <section>
+          <div class="card" style="width: 28rem;">
+              <div class="card-body">
+                  <!--Header-->
+                  <div class="form-header default-color">
+                      <h3><i class="fa fa-lock"></i> Sign In:</h3>
+                  </div>
+                  <!--Body-->
+                  <div class="md-form">
+                      <i class="fa fa-envelope prefix grey-text"></i>
+                      <input type="text" id="defaultForm-email" class="form-control">
+                      <label for="defaultForm-email">Your email</label>
+                  </div>
+                  <div class="md-form">
+                      <i class="fa fa-lock prefix grey-text"></i>
+                      <input type="password" id="defaultForm-pass" class="form-control">
+                      <label for="defaultForm-pass">Your password</label>
+                  </div>
+                  <div class="text-center">
+                      <button class="btn btn-default waves-effect waves-light">Sign In</button>
+                  </div>
+              </div>
+          </div>
+      </section>
+    </div>
+</div>
+<!--/.Dashboard-->
+<!--Footer-->
+<app-footer></app-footer>
+<!--/.Footer-->
