--- a/abcnodeweb/src/app/header/header.component.html
+++ b/abcnodeweb/src/app/header/header.component.html
@@ -6,10 +6,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" [routerLink]="['/']">About Us <span class="sr-only">(current)</span></a>
+                <li class="nav-item" routerLinkActive="active">
+                    <a class="nav-link" [routerLink]="['/aboutUs']">About Us <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" routerLinkActive="active">
                     <a class="nav-link" [routerLink]="['/signIn']">Sign In</a>
                 </li>
             </ul>
