--- a/abcnodeweb/src/app/footer/footer.component.html
+++ b/abcnodeweb/src/app/footer/footer.component.html
@@ -5,28 +5,25 @@
         <div class="row">
             <!--First column-->
             <div class="col-lg-3 col-md-6 ml-auto">
-                <h5 class="title mb-3"><strong>About material design</strong></h5>
-                <p>Material Design (codenamed Quantum Paper) is a design language developed by Google.</p>
-                <p>Material Design for Bootstrap (MDB) is a powerful Material Design UI KIT for most popular HTML, CSS,
-                    and JS framework - Bootstrap.</p>
+                <h5 class="title mb-3"><i class="fa fa-info-circle footer-icons" aria-hidden="true"></i></h5>
+                <p>NEVER respond to any popup,email, SMS or phone call, no matter how appealing or official looking,
+                seeking your personal information such as username, password(s), mobile number, ATM Card details, etc.
+                Such communications are sent or created by fraudsters to trick you into parting with your credentials.</p>
             </div>
             <!--/.First column-->
             <hr class="w-100 clearfix d-sm-none">
             <!--Second column-->
             <div class="col-lg-2 col-md-6 ml-auto">
-                <h5 class="title mb-3"><strong>First column</strong></h5>
+                <h5 class="title mb-3"><i class="fa fa-link footer-icons" aria-hidden="true"></i></h5>
                 <ul>
                     <li>
-                        <a href="#!">Link 1</a>
+                        <a href="#!">Trouble logging in</a>
                     </li>
                     <li>
-                        <a href="#!">Link 2</a>
+                        <a href="#!">Report Phishing</a>
                     </li>
                     <li>
-                        <a href="#!">Link 3</a>
-                    </li>
-                    <li>
-                        <a href="#!">Link 4</a>
+                        <a href="#!">Security Tips</a>
                     </li>
                 </ul>
             </div>
@@ -34,19 +31,16 @@
             <hr class="w-100 clearfix d-sm-none">
             <!--Third column-->
             <div class="col-lg-2 col-md-6 ml-auto">
-                <h5 class="title mb-3"><strong>Second column</strong></h5>
+                <h5 class="title mb-3"><i class="fa fa-comments-o footer-icons" aria-hidden="true"></i></h5>
                 <ul>
                     <li>
-                        <a href="#!">Link 1</a>
+                        <a href="#!">Lock User Access</a>
                     </li>
                     <li>
-                        <a href="#!">Link 2</a>
+                        <a href="#!">Block ATM Card</a>
                     </li>
                     <li>
-                        <a href="#!">Link 3</a>
-                    </li>
-                    <li>
-                        <a href="#!">Link 4</a>
+                        <a href="#!">Password Management</a>
                     </li>
                 </ul>
             </div>
@@ -54,19 +48,10 @@
             <hr class="w-100 clearfix d-sm-none">
             <!--Fourth column-->
             <div class="col-lg-2 col-md-6 ml-auto">
-                <h5 class="title mb-3"><strong>Third column</strong></h5>
+                <h5 class="title mb-3"><i class="fa fa-sitemap footer-icons" aria-hidden="true"></i></h5>
                 <ul>
                     <li>
-                        <a href="#!">Link 1</a>
-                    </li>
-                    <li>
-                        <a href="#!">Link 2</a>
-                    </li>
-                    <li>
-                        <a href="#!">Link 3</a>
-                    </li>
-                    <li>
-                        <a href="#!">Link 4</a>
+                        <a href="#!">Site Map</a>
                     </li>
                 </ul>
             </div>
@@ -79,12 +64,16 @@
 
     <!--Call to action-->
     <div class="call-to-action">
-        <h4 class="mb-5">Material Design for Bootstrap</h4>
+        <p class="mb-5">This site is certified by Verisign as a secure and trusted site. All information sent or received in this site is encrypted using 256-bit encryption</p>
         <ul>
             <li>
-                <h5>Get our UI KIT for free</h5></li>
-            <li><a target="_blank" href="https://mdbootstrap.com/getting-started/" class="btn btn-danger" rel="nofollow">Sign up!</a></li>
-            <li><a target="_blank" href="https://mdbootstrap.com/material-design-for-bootstrap/" class="btn btn-default" rel="nofollow">Learn more</a></li>
+                <h5>Get our App downloaded here</h5></li>
+            <li>
+                <i class="fa fa-android" aria-hidden="true"></i>
+                <a target="_blank" href="https://mdbootstrap.com/getting-started/" class="btn btn-danger" rel="nofollow"> PlayStore</a></li>
+            <li>
+                <i class="fa fa-apple" aria-hidden="true"></i>
+                <a target="_blank" href="https://mdbootstrap.com/material-design-for-bootstrap/" class="btn btn-default" rel="nofollow">AppStore</a></li>
         </ul>
     </div>
     <!--/.Call to action-->
@@ -92,7 +81,7 @@
     <!--Copyright-->
     <div class="footer-copyright">
         <div class="container-fluid">
-            © 2015 Copyright: <a href="https://www.MDBootstrap.com"> MDBootstrap.com </a>
+            © 2017 Copyright: <a href="https://www.MDBootstrap.com"> ABCBank.com </a>
 
         </div>
     </div>
