--- a/abcnodeweb/src/styles.css
+++ b/abcnodeweb/src/styles.css
@@ -50,3 +50,7 @@
             -o-background-size: cover;
             background-size: cover;
         }
+
+        .footer-icons {
+            font-size: 2em;
+        }
