--- a/abcnodeweb/src/app/header/header.component.html
+++ b/abcnodeweb/src/app/header/header.component.html
@@ -1,18 +1,20 @@
-<nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
+<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar" [containerInside]="false">
     <div class="container">
-        <a class="navbar-brand" href="#">LOGO</a>
+      <logo>
+          <a class="logo navbar-brand" href="#"><strong>LOGO</strong></a>
+      </logo>
+      <links>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
-                <li class="nav-item" routerLinkActive="active">
-                    <a class="nav-link" [routerLink]="['/aboutUs']">About Us <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item" routerLinkActive="active">
-                    <a class="nav-link" [routerLink]="['/signIn']">Sign In</a>
-                </li>
-            </ul>
-        </div>
+            <li class="nav-item waves-light" routerLinkActive="active" mdbRippleRadius>
+                <a class="nav-link" [routerLink]="['/aboutUs']">About Us <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item waves-light" routerLinkActive="active" mdbRippleRadius>
+                <a class="nav-link" [routerLink]="['/signIn']">Sign In</a>
+            </li>
+          </ul>
+      </links>
     </div>
-</nav>
+</mdb-navbar>
