--- a/abcnodeweb/src/app/sign-in/sign-in.component.html
+++ b/abcnodeweb/src/app/sign-in/sign-in.component.html
@@ -15,12 +15,12 @@
                   <!--Body-->
                   <div class="md-form">
                       <i class="fa fa-envelope prefix grey-text"></i>
-                      <input type="text" id="username" name="username" class="form-control" required minlength="3" [(ngModel)]="username">
+                      <input type="text" id="username" name="username" class="form-control" required minlength="3" [(ngModel)]="model.username">
                       <label for="username">Your username</label>
                   </div>
                   <div class="md-form">
                       <i class="fa fa-lock prefix grey-text"></i>
-                      <input type="password" id="password" name="password" class="form-control" required minlength="3" [(ngModel)]="password">
+                      <input type="password" id="password" name="password" class="form-control" required minlength="3" [(ngModel)]="model.password">
                       <label for="password">Your password</label>
                   </div>
                   <div class="text-center">
