Updated account summary page.

--- a/abcnodeweb/src/app/accounts/accounts.component.html
+++ b/abcnodeweb/src/app/accounts/accounts.component.html
@@ -1,46 +1,64 @@
-<mdb-navbar SideClass="navbar fixed-top navbar-expand-lg navbar-dark bg-pink scrolling-navbar" [containerInside]="false">
+<mdb-navbar SideClass="navbar fixed-top navbar-expand-lg navbar-dark bg-purple scrolling-navbar" [containerInside]="false">
     <logo>
-        <a class="logo navbar-brand" href="#"><strong>Navbar</strong></a>
+        <a class="logo navbar-brand"><strong>Navbar</strong></a>
     </logo>
     <links>
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active waves-light" mdbRippleRadius>
-                <a class="nav-link">Home <span class="sr-only">(current)</span></a>
+        <ul class="navbar-nav">
+            <li class="nav-item dropdown waves-light" dropdown>
+                <a dropdownToggle class="nav-link dropdown-toggle waves-light" mdbRippleRadius>Account<span class="caret"></span></a>
+                <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
+                    <a class="dropdown-item waves-light" [routerLink]="['/account/summary']"mdbRippleRadius>Summary</a>
+                    <a class="dropdown-item waves-light" [routerLink]="['/account/viewStatement']" mdbRippleRadius>View Statement</a>
+                    <a class="dropdown-item waves-light" mdbRippleRadius>Fixed Deposit</a>
+                    <a class="dropdown-item waves-light" mdbRippleRadius>Recurring Deposit</a>
+                    <a class="dropdown-item waves-light" mdbRippleRadius>TDS Enquire</a>
+                </div>
             </li>
-            <li class="nav-item waves-light" mdbRippleRadius>
-                <a class="nav-link">Features</a>
-            </li>
-            <li class="nav-item waves-light" mdbRippleRadius>
-                <a class="nav-link">Pricing</a>
-            </li>
-            <li class="nav-item waves-light" mdbRippleRadius>
-                <a class="nav-link">Opinions</a>
-            </li>
-        </ul>
-        <ul class="navbar-nav nav-flex-icons">
-            <li class="nav-item waves-light" mdbRippleRadius>
-                <a class="nav-link"><i class="fa fa-facebook"></i></a>
-            </li>
-            <li class="nav-item waves-light" mdbRippleRadius>
-                <a class="nav-link"><i class="fa fa-twitter"></i></a>
-            </li>
-            <li class="nav-item waves-light" mdbRippleRadius>
-                <a class="nav-link"><i class="fa fa-instagram"></i></a>
+            <li class="nav-item dropdown waves-light" dropdown>
+                <a dropdownToggle class="nav-link dropdown-toggle waves-light" mdbRippleRadius>Fund Transfer<span class="caret"></span></a>
+                <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
+                    <a class="dropdown-item waves-light" [routerLink]="['/fundTransfer/thirdParty']" mdbRippleRadius>Third Party Funds Transfer</a>
+                    <a class="dropdown-item waves-light" [routerLink]="['/fundTransfer/specialPayment']" mdbRippleRadius>Special Payments</a>
+                    <a class="dropdown-item waves-light" mdbRippleRadius>VISA CardPay</a>
+                </div>
             </li>
         </ul>
     </links>
 </mdb-navbar>
 <!-- Main -->
-<main>
-    <div class="container" style="height:1300px;">
-        <div class="row mt-5 pt-5">
-            <div class="col text-center">
-                <h2>This Navbar is fixed</h2>
-                <h5>It will always stay visible on the top, even when you scroll down</h5>
-                <br>
-                <p>Full page intro with background image will be always displayed in full screen mode, regardless of device </p>
-            </div>
-        </div>
+    <div class="hm-black-light" style="height: 100%;">
+        <div class="full-bg-img flex-center">
+            <div class="container">
+                <div class="card">
+                    <div class="card-body">
+                      <table class="table table-hover account-summary">
+                          <thead class="mdb-color darken-3">
+                              <tr class="text-white">
+                                  <th colspan="2" class="text-center">Account Summary</th>
+                              </tr>
+                          </thead>
+                          <tbody class="grey-text">
+                              <tr>
+                                  <td>Account Name</td>
+                                  <td>test</td>
+                              </tr>
+                              <tr>
+                                  <td>Account Number</td>
+                                  <td>test</td>
+                              </tr>
+                              <tr>
+                                  <td>Branch Name</td>
+                                  <td>test</td>
+                              </tr>
+                              <tr>
+                                  <td>Account Balance</td>
+                                  <td>test</td>
+                              </tr>
+                          </tbody>
+                        </table>
+                    </div>
+                </div>
+              </div>
+          </div>
     </div>
-</main>
 <!-- /.Main -->
