--- a/abcnodeweb/src/app/accounts/accounts.component.html
+++ b/abcnodeweb/src/app/accounts/accounts.component.html
@@ -7,8 +7,8 @@
             <li class="nav-item dropdown waves-light" dropdown>
                 <a dropdownToggle class="nav-link dropdown-toggle waves-light" mdbRippleRadius>Account<span class="caret"></span></a>
                 <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
-                    <a class="dropdown-item waves-light" [routerLink]="['/account/summary']"mdbRippleRadius>Summary</a>
-                    <a class="dropdown-item waves-light" [routerLink]="['/account/viewStatement']" mdbRippleRadius>View Statement</a>
+                    <a class="dropdown-item waves-light" [routerLink]="['/accounts/summary']"mdbRippleRadius>Summary</a>
+                    <a class="dropdown-item waves-light" [routerLink]="['/accounts/viewStatement']" mdbRippleRadius>View Statement</a>
                     <a class="dropdown-item waves-light" mdbRippleRadius>Fixed Deposit</a>
                     <a class="dropdown-item waves-light" mdbRippleRadius>Recurring Deposit</a>
                     <a class="dropdown-item waves-light" mdbRippleRadius>TDS Enquire</a>
