LOGO and Sign in fixed

--- a/abcnodeweb/src/app/dashboard/dashboard.component.html
+++ b/abcnodeweb/src/app/dashboard/dashboard.component.html
@@ -6,9 +6,15 @@
     <div class="full-bg-img flex-center">
         <ul class="animated fadeInUp">
             <li>
-                <h1 class="h1-responsive font-bold">ABC BANK</h1></li>
+                <h1 class="h1-responsive font-bold" style="color: #8a25b1">ABC BANK</h1>
+            </li>
             <li>
-                <p>Your Perfect Banking Partner</p>
+                <h4 class="h3-responsice font-bold" style="color: #8a25b1">Your Perfect Banking Partner</h4>
+            </li>
+            <li>
+              <p>
+                ABC is an employer of choice in India and serves the full spectrum of clients - from helping India's top global corporations commit capital, make markets and manage their global cash positions to supporting the growth ambitions of the country's small and mid-sized enterprises and enabling individuals and households save, invest, spend, borrow and protect their money with trust and confidence. ABC India's products and services are organized under two major segments: Institutional Clients Group (ICG) and Global Consumer Bank (GCB).
+              </p>
             </li>
         </ul>
     </div>
