--- a/abcnodeweb/src/styles.scss
+++ b/abcnodeweb/src/styles.scss
@@ -31,6 +31,9 @@
             .navbar {
                 background-color: #1C2331;
             }
+            .logo {
+                width: 60% !important;
+            }
         }
         .navbar .btn-group .dropdown-menu a:hover {
             color: #000 !important;
@@ -54,4 +57,15 @@
 
         .footer-icons {
             font-size: 2em;
+        }
+
+        .form-header {
+            height: 70px;
+            color: #fff;
+            text-align: center;
+            margin-top: -50px;
+            margin-bottom: 3rem;
+            padding: 1rem;
+            border-radius: 2px;
+            box-shadow: 0 5px 11px 0 rgba(0,0,0,.18), 0 4px 15px 0 rgba(0,0,0,.15);
         }
