Updated router details.

--- a/abcnodeweb/src/app/accounts-header/accounts-header.component.html
+++ b/abcnodeweb/src/app/accounts-header/accounts-header.component.html
@@ -18,8 +18,8 @@
                 <a dropdownToggle class="nav-link dropdown-toggle waves-light" mdbRippleRadius>Fund Transfer<span class="caret"></span></a>
                 <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
                     <a class="dropdown-item waves-light" [routerLink]="['/fundTransfer/thirdParty']" mdbRippleRadius>Third Party Funds Transfer</a>
-                    <a class="dropdown-item waves-light" [routerLink]="['/fundTransfer/specialPayment']" mdbRippleRadius>Special Payments</a>
-                    <a class="dropdown-item waves-light" mdbRippleRadius>VISA CardPay</a>
+                    <a class="dropdown-item waves-light" [routerLink]="['/fundTransfer/benificiary']" mdbRippleRadius>Benificiary</a>
+                    <a class="dropdown-item waves-light" mdbRippleRadius>Special Payments</a>
                 </div>
             </li>
         </ul>
