--- a/abcnodeweb/src/app/accounts/account-statement/account-statement.component.html
+++ b/abcnodeweb/src/app/accounts/account-statement/account-statement.component.html
@@ -1,6 +1,6 @@
 <app-accounts-header></app-accounts-header>
 <div class="hm-black-light" style="height: 100%;">
-    <div class="full-bg-img">
+    <div class="full-bg-img flex-center">
         <div class="container">
             <div class="card">
                 <div class="card-body">
