--- a/abcnodeweb/src/app/accounts-header/accounts-header.component.html
+++ b/abcnodeweb/src/app/accounts-header/accounts-header.component.html
@@ -15,12 +15,15 @@
                 </div>
             </li>
             <li class="nav-item dropdown waves-light" dropdown>
-                <a dropdownToggle class="nav-link dropdown-toggle waves-light" mdbRippleRadius>Fund Transfer<span class="caret"></span></a>
+                <a dropdownToggle class="nav-link dropdown-toggle waves-light" mdbRippleRadius>Banking<span class="caret"></span></a>
                 <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
-                    <a class="dropdown-item waves-light" [routerLink]="['/fundTransfer/thirdParty']" mdbRippleRadius>Third Party Funds Transfer</a>
-                    <a class="dropdown-item waves-light" [routerLink]="['/fundTransfer/benificiary']" mdbRippleRadius>Benificiary</a>
+                    <a class="dropdown-item waves-light" [routerLink]="['/banking/fundTransfer']" mdbRippleRadius>Funds Transfer</a>
+                    <a class="dropdown-item waves-light" [routerLink]="['/banking/benificiary']" mdbRippleRadius>Benificiary</a>
                     <a class="dropdown-item waves-light" mdbRippleRadius>Special Payments</a>
                 </div>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link waves-light" [routerLink]="['/cob']" mdbRippleRadius>COB</a>
             </li>
         </ul>
     </links>
