--- a/abcnodeweb/src/app/footer/footer.component.html
+++ b/abcnodeweb/src/app/footer/footer.component.html
@@ -70,10 +70,10 @@
                 <h5>Get our App downloaded here</h5></li>
             <li>
                 <i class="fa fa-android" aria-hidden="true"></i>
-                <a target="_blank" href="https://mdbootstrap.com/getting-started/" class="btn btn-danger" rel="nofollow"> PlayStore</a></li>
+                <a target="_blank" href="#" class="btn btn-danger" rel="nofollow"> PlayStore</a></li>
             <li>
                 <i class="fa fa-apple" aria-hidden="true"></i>
-                <a target="_blank" href="https://mdbootstrap.com/material-design-for-bootstrap/" class="btn btn-default" rel="nofollow">AppStore</a></li>
+                <a target="_blank" href="#" class="btn btn-default" rel="nofollow">AppStore</a></li>
         </ul>
     </div>
     <!--/.Call to action-->
@@ -81,7 +81,7 @@
     <!--Copyright-->
     <div class="footer-copyright">
         <div class="container-fluid">
-            © 2017 Copyright: <a href="https://www.MDBootstrap.com"> ABCBank.com </a>
+            © 2017 Copyright: <a href="/aboutUs"> ABCBank.com </a>
 
         </div>
     </div>
