--- a/abcnodeweb/src/app/accounts/accounts.component.html
+++ b/abcnodeweb/src/app/accounts/accounts.component.html
@@ -4,7 +4,7 @@
         <div class="container">
             <div class="card">
                 <div class="card-body">
-                  <table class="table table-hover account-summary z-depth-5">
+                  <table class="table table-hover account-summary z-depth-5 animated zoomIn">
                       <thead class="mdb-color darken-3">
                           <tr class="text-white">
                               <th colspan="2" class="text-center">
