COB page completed

--- a/abcnodeweb/src/app/accounts-header/accounts-header.component.html
+++ b/abcnodeweb/src/app/accounts-header/accounts-header.component.html
@@ -27,7 +27,7 @@
                 </div>
             </li>
             <li class="nav-item active">
-                <a class="nav-link waves-light" [routerLink]="['/cob']" mdbRippleRadius>COB</a>
+                <a class="nav-link waves-light" [routerLink]="['/cob']" mdbRippleRadius>On Boarding</a>
             </li>
         </ul>
         <ul class="navbar-nav ml-auto">
